tests/error/unused_unpack.gw
#! [contains] unused Tuple unpack
>(a,b);
